@@ -35,6 +35,8 @@ v2.0.0pre1 Sat, 29 May 2004 01:59:14 +0200
 	  - old mootHMM behavior can be emulated by achieved
 	    by removing .clx (class-frequency) file
 	+ CHMM behavior reduced to HMM tests OK (good ol' 95.67% correct)
+	  - weirdness: gaspode class fixes bungled... must investigate
+	+ added verbose information tracking to HMM
 	+ Todo:
 	  - (added, untested) add & test binary I/O for mootClassfreqs
 	  - rename 'moothmm' -> 'moot'
